fixed aligning in course team

--- a/Question_2/cscb20coursewebsite. html/cscb20coursewebsite.css
+++ b/Question_2/cscb20coursewebsite. html/cscb20coursewebsite.css
@@ -104,7 +104,14 @@ body{
 
 .content {
     flex-grow: 1;
-    padding-top: 150px;
+    padding-top: 190px;
+}
+
+.contentteam {
+    flex-grow: 1;
+    padding-top: 190px;
+    width: 100%;
+
 }
 
 .footer {
